--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
 							<li class="has-line-data" data-line-start="54" data-line-end="55">The total supply of Sugarchain is about <code>51</code> times greater than Bitcoin.</li>
 							</ul>
 							</li>
-							<li class="has-line-data" data-line-start="55" data-line-end="56">Halving Chart: <img src="https://github.com/sugarchain-project/website/blob/master/image/halving_chart.png" alt="Halving Chart"></li>
-							<li class="has-line-data" data-line-start="56" data-line-end="57">Halving Table: <img src="https://github.com/sugarchain-project/website/blob/master/image/halving_table.png" alt="Halving Table"></li>
+							<li class="has-line-data" data-line-start="55" data-line-end="56">Halving Chart: <img src="image/halving_chart.png" alt="Halving Chart"></li>
+							<li class="has-line-data" data-line-start="56" data-line-end="57">Halving Table: <img src="image/halving_table.png" alt="Halving Table"></li>
 							</ul>
 							<h2 class="code-line" data-line-start=59 data-line-end=61 ><a id="oneCPUonevote_59"></a>one-CPU-one-vote</h2>
 							<blockquote>
@@ -256,14 +256,14 @@
 							<p class="has-line-data" data-line-start="96" data-line-end="97">Block time vs difficulty at first launching on testnet</p>
 							<ul>
 							<li class="has-line-data" data-line-start="97" data-line-end="98">To keep the block time 5 seconds, SugarShield-N510 adjusts the difficulty level. Unlike the Zcash’s modification version, we use a moving average of <code>510 blocks</code> (about 42.5 minutes). It counts from block 1, an adjustment is made at block 511, and the actual control begins at block 512. <a href="https://github.com/sugarchain-project/website/blob/master/log/time_vs_difficulty-13536.log">(log: time-diff)</a></li>
-							<li class="has-line-data" data-line-start="98" data-line-end="100"><img src="https://github.com/sugarchain-project/website/blob/master/image/time_vs_difficulty.png" alt="Blocktime vs Difficulty"></li>
+							<li class="has-line-data" data-line-start="98" data-line-end="100"><img src="image/time_vs_difficulty.png" alt="Blocktime vs Difficulty"></li>
 							</ul>
 							</li>
 							<li class="has-line-data" data-line-start="100" data-line-end="103">
 							<p class="has-line-data" data-line-start="100" data-line-end="101">Nonce distribution at first launching on testnet</p>
 							<ul>
 							<li class="has-line-data" data-line-start="101" data-line-end="102">The nonce is randomly well distributed. Difficulty changes but no bias. <a href="https://github.com/sugarchain-project/website/blob/master/log/nonce_vs_difficulty-13548.log">(log: nonce-diff)</a></li>
-							<li class="has-line-data" data-line-start="102" data-line-end="103"><img src="https://github.com/sugarchain-project/website/blob/master/image/nonce_vs_difficulty.png" alt="Nonce vs Difficulty"></li>
+							<li class="has-line-data" data-line-start="102" data-line-end="103"><img src="image/nonce_vs_difficulty.png" alt="Nonce vs Difficulty"></li>
 							</ul>
 							</li>
 							</ul>
