--- a/index.html
+++ b/index.html
@@ -255,14 +255,14 @@
 							<li class="has-line-data" data-line-start="96" data-line-end="100">
 							<p class="has-line-data" data-line-start="96" data-line-end="97">Block time vs difficulty at first launching on testnet</p>
 							<ul>
-							<li class="has-line-data" data-line-start="97" data-line-end="98">To keep the block time 5 seconds, SugarShield-N510 adjusts the difficulty level. Unlike the Zcash’s modification version, we use a moving average of <code>510 blocks</code> (about 42.5 minutes). It counts from block 1, an adjustment is made at block 511, and the actual control begins at block 512. <a href="https://github.com/sugarchain-project/website/blob/master/log/time_vs_difficulty-13536.log">(log: time-diff)</a></li>
+							<li class="has-line-data" data-line-start="97" data-line-end="98">To keep the block time 5 seconds, SugarShield-N510 adjusts the difficulty level. Unlike the Zcash’s modification version, we use a moving average of <code>510 blocks</code> (about 42.5 minutes). It counts from block 1, an adjustment is made at block 511, and the actual control begins at block 512. <a href="log/time_vs_difficulty-13536.log">(log: time-diff)</a></li>
 							<li class="has-line-data" data-line-start="98" data-line-end="100"><img src="image/time_vs_difficulty.png" alt="Blocktime vs Difficulty"></li>
 							</ul>
 							</li>
 							<li class="has-line-data" data-line-start="100" data-line-end="103">
 							<p class="has-line-data" data-line-start="100" data-line-end="101">Nonce distribution at first launching on testnet</p>
 							<ul>
-							<li class="has-line-data" data-line-start="101" data-line-end="102">The nonce is randomly well distributed. Difficulty changes but no bias. <a href="https://github.com/sugarchain-project/website/blob/master/log/nonce_vs_difficulty-13548.log">(log: nonce-diff)</a></li>
+							<li class="has-line-data" data-line-start="101" data-line-end="102">The nonce is randomly well distributed. Difficulty changes but no bias. <a href="log/nonce_vs_difficulty-13548.log">(log: nonce-diff)</a></li>
 							<li class="has-line-data" data-line-start="102" data-line-end="103"><img src="image/nonce_vs_difficulty.png" alt="Nonce vs Difficulty"></li>
 							</ul>
 							</li>
