fix: review by salmaan1234 @Nugetzrul3

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 							<h2 class="code-line" data-line-start=5 data-line-end=7 ><a id="The_meaning_of_Yumekawa_5"></a>The meaning of Yumekawa</h2>
 							<p class="has-line-data" data-line-start="7" data-line-end="8">Sugarchain’s first node software is called <code>Yumekawa (夢川)</code>. It can be translated in some ways.</p>
 							<ul>
-							<li class="has-line-data" data-line-start="8" data-line-end="9">“Yume (夢)” means dream and “Kawa (川)” means river. So its <code>Dream River</code> in japanese.</li>
+							<li class="has-line-data" data-line-start="8" data-line-end="9">“Yume (夢)” means dream and “Kawa (川)” means river. So it's <code>Dream River</code> in japanese.</li>
 							<li class="has-line-data" data-line-start="9" data-line-end="10">The second letter “Kawa” stands for “Kawaii (可愛い)”. In this case the meaning is <code>Dreamy Cute</code>.</li>
 							<li class="has-line-data" data-line-start="10" data-line-end="11">Also Yumekawa replaces the word <code>Core</code> (ie: Bitcoin Core). We think it sounds a bit centralized.</li>
 							</ul>
@@ -187,14 +187,14 @@
 							</li>
 							<li class="has-line-data" data-line-start="48" data-line-end="51">Halving schedule:
 							<ul>
-							<li class="has-line-data" data-line-start="49" data-line-end="50">Interval <code>12500000 blocks (5^8*32)</code> is about 2 years (exactly 1.9818619989852864… years).</li>
-							<li class="has-line-data" data-line-start="50" data-line-end="51">The total number of times a halving will take place is <code>33 times</code>, over the span of <code>66 years</code>.</li>
+							<li class="has-line-data" data-line-start="49" data-line-end="50">Interval <code>12500000 blocks (5^8*32)</code> which is about 2 years (exactly 1.9818619989852864… years).</li>
+							<li class="has-line-data" data-line-start="50" data-line-end="51">The total number of times halving will occur is <code>33 times</code>, over the span of <code>66 years</code>.</li>
 							</ul>
 							</li>
 							<li class="has-line-data" data-line-start="51" data-line-end="55">Total supply:
 							<ul>
 							<li class="has-line-data" data-line-start="52" data-line-end="53"><code>1073741824 SUGAR</code> in theory, and <code>1073741823.875 SUGAR</code> in actual.</li>
-							<li class="has-line-data" data-line-start="53" data-line-end="54">The difference is <code>0.125 SUGAR</code>. One Satoshi (0.00000001) limitation makes this difference. In addition, this number is meaningful. FYI) <code>1 GB = 1073741824 Byte (2^30)</code>.</li>
+							<li class="has-line-data" data-line-start="53" data-line-end="54">The difference is <code>0.125 SUGAR</code>. One Satoshi (0.00000001) limitation makes this difference. In addition, this number is meaningful. FYI: <code>1 GB = 1073741824 Byte (2^30)</code>.</li>
 							<li class="has-line-data" data-line-start="54" data-line-end="55">The total supply of Sugarchain is about <code>51</code> times greater than Bitcoin.</li>
 							</ul>
 							</li>
