--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 							<li class="has-line-data" data-line-start="120" data-line-end="121">Solo mining: Make a file <code>sugarchain.conf</code>, restart your wallet and run cpuminer-opt-sugarchain (RPC=<code>34229</code>, testnet5 RPC=<code>44229</code>, regtest RPC=<code>45339</code>)</li>
 							</ul>
 							<ul>
-							<pre><code class="has-line-data" data-line-start="122" data-line-end="126">server=1<br>rpcuser=username<br>rpcpassword=password
+							<pre><code class="has-line-data" data-line-start="122" data-line-end="126">server=1<br>rpcuser=username<br>rpcpassword=password<br>rpcallowip=127.0.0.1
 							</code></pre>
 							</ul>
 							<ul>
