--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 							<ul>
 							<li class="has-line-data" data-line-start="52" data-line-end="53"><code>1073741824 SUGAR</code> in theory, and <code>1073741823.875 SUGAR</code> in actual.</li>
 							<li class="has-line-data" data-line-start="53" data-line-end="54">The difference is <code>0.125 SUGAR</code>. One Satoshi (0.00000001) limitation makes this difference. In addition, this number is meaningful. FYI: <code>1 GB = 1073741824 Byte (2^30)</code>.</li>
-							<li class="has-line-data" data-line-start="54" data-line-end="55">The total supply of Sugarchain is about <code>51</code> times greater than Bitcoin.</li>
+							<li class="has-line-data" data-line-start="54" data-line-end="55">The total supply of Sugarchain is about <code>51 times</code> greater than Bitcoin.</li>
 							</ul>
 							</li>
 							<li class="has-line-data" data-line-start="55" data-line-end="56">Halving Chart: <img src="image/halving_chart.png" alt="Halving Chart"></li>
