--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
+		<link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
+		<link href='https://fonts.googleapis.com/css?family=Ubuntu Mono' rel='stylesheet'>
+
 		<style>
 			body, html {
-				font-family: 'Ubuntu', sans-serif;
+				font-family: 'Ubuntu';
 				height: 100%;
 				padding: 0;
 				margin: 0;
@@ -66,6 +69,21 @@
 				background-color: #191B1C;
 				color: #ffffff;
 				padding: 20px;
+			}
+			code {
+				/* background-color: #cccccc; */
+				padding: 2px;
+				margin: 2px;
+				font-family: 'Ubuntu Mono';
+				font-size: 112%;
+				color: #e83e8c;
+			}
+			pre code {
+				/* background-color: #cccccc; */
+				padding: 0px;
+				margin: 0px;
+				font-family: 'Ubuntu Mono';
+				font-size: 112%;
 			}
 		</style>
 	</head>
