--- a/index.html
+++ b/index.html
@@ -94,8 +94,11 @@
 				<div class="text-center container">
 					<img src="logo.png" alt="Logo" class="logo mb-2">
 					<h1 class="d-block mb-2">
-						Sugarchain - the world's fastest PoW blockchain
+						Sugarchain
 					</h1>
+					<h4>
+						one-CPU-one-vote, the world's fastest PoW blockchain
+					</h4>
 					<div id="height" class="d-block mb-2">
 						Current height is <span class="loading">loading...</span> <a href="#" class="current d-none" target="_blank">0</a> (<span class="passed">0</span> blocks since you open this page)
 					</div>
