--- a/index.html
+++ b/index.html
@@ -103,9 +103,10 @@
 						Current height is <span class="loading">loading...</span> <a href="#" class="current d-none" target="_blank">0</a> (<span class="passed">0</span> blocks since you open this page)
 					</div>
 					<div class="links mb-2">
-						<a href="#specs" class="scroll">Specs</a>
-						<a href="https://github.com/sugarchain-project/sugarchain/releases/latest" target="_blank">Latest release</a>
-						<a href="#contacts" class="scroll">Contacts</a>
+						<a href="#specs" class="scroll">SPECS</a>
+						<a href="https://github.com/sugarchain-project/sugarchain/releases/latest" target="_blank">WALLET</a>
+						<a href="https://github.com/cryptozeny/cpuminer-opt-sugarchain/releases/latest" target="_blank">CPUMINER</a>
+						<a href="#contacts" class="scroll">CONTACTS</a>
 					</div>
 				</div>
 			</div>
@@ -117,7 +118,7 @@
 					<div class="col-12">
 						<div class="specs-body">
 							<!-- BEGIN - WEBSITE -->
-
+							<!-- MD to HTML: https://dillinger.io/ -->
 
 							<h1 class="code-line" data-line-start=0 data-line-end=2 ><a id="Sugarchain_0"></a>Sugarchain</h1>
 							<p class="has-line-data" data-line-start="2" data-line-end="3">one-CPU-one-vote, the world’s fastest PoW blockchain</p>
