--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 		</section>
 
 		<footer id="contacts" class="text-center">
-			If you are interested in the Sugarchain project, come to <a href="https://discord.gg/rm7HHv6" rel="nofollow">Discord</a> and please follow us on <a href="https://twitter.com/sugarchain_dev" rel="nofollow">Twitter</a>.
+			If you are interested in the Sugarchain project, come to <a href="https://discord.gg/rm7HHv6" rel="nofollow">Discord</a> and follow us on <a href="https://twitter.com/sugarchain_dev" rel="nofollow">Twitter</a>.
 		</footer>
 
 		<script>
