--- a/index.html
+++ b/index.html
@@ -321,7 +321,8 @@
 							</code></pre>
 							</ul>
 							<ul>
-							<li class="has-line-data" data-line-start="134" data-line-end="135"><strong>cpuminer-opt-sugarchain</strong>: <a href="https://github.com/cryptozeny/cpuminer-opt-sugarchain/releases/tag/v3.8.8.1.7rc1">https://github.com/cryptozeny/cpuminer-opt-sugarchain/releases/tag/v3.8.8.1.7rc1</a></li>
+							<li class="has-line-data" data-line-start="134" data-line-end="135">For mining on Windows, please cheack out our detailed tutorial here: <a href="https://github.com/sugarchain-project/Windows-Mining/wiki/Solo-Mining-for-Windows1">https://github.com/sugarchain-project/Windows-Mining/wiki/Solo-Mining-for-Windows</a></li>
+							<li class="has-line-data" data-line-start="135" data-line-end="136"><strong>cpuminer-opt-sugarchain</strong>: <a href="https://github.com/cryptozeny/cpuminer-opt-sugarchain/releases/tag/v3.8.8.1.7rc1">https://github.com/cryptozeny/cpuminer-opt-sugarchain/releases/tag/v3.8.8.1.7rc1</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=137 data-line-end=139 ><a id="Pools_137"></a>Pools</h2>
 							<p class="has-line-data" data-line-start="139" data-line-end="140">Please contact us if you have a new mining pool.</p>
@@ -331,6 +332,8 @@
 							<li class="has-line-data" data-line-start="142" data-line-end="143">52hash@china <a href="http://sugar.52hash.com/">http://sugar.52hash.com/</a></li>
 							<li class="has-line-data" data-line-start="143" data-line-end="144">rplant@moscow <a href="https://pool.rplant.xyz/">https://pool.rplant.xyz/</a></li>
 							<li class="has-line-data" data-line-start="144" data-line-end="145">happysensor@korea <a href="http://pool.happysensor.xyz/">http://pool.happysensor.xyz/</a></li>
+							<li class="has-line-data" data-line-start="145" data-line-end="146">hashpex@USA <a href="http://hashpex.com/">http://hashpex.com/</a></li>
+							<li class="has-line-data" data-line-start="146" data-line-end="147">skypool@global <a href="https://sugar.skypool.co/">https://sugar.skypool.co/ (beta mode)</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=147 data-line-end=149 ><a id="Explorer_147"></a>Explorer</h2>
 							<ul>
@@ -344,8 +347,9 @@
 							</ul>
 							<h2 class="code-line" data-line-start=170 data-line-end=172 ><a id="Community_170"></a>Community</h2>
 							<ul>
-							<li class="has-line-data" data-line-start="172" data-line-end="173">Discord: <a href="https://discord.gg/rm7HHv6">https://discord.gg/rm7HHv6</a></li>
-							<li class="has-line-data" data-line-start="173" data-line-end="174">Twitter: <a href="https://twitter.com/sugarchain_dev">https://twitter.com/sugarchain_dev</a></li>
+							<li class="has-line-data" data-line-start="172" data-line-end="173">Discord: <strong>Deleted by someone's reporting - Saturday, 7 September, 2019 (UTC)</strong></li>
+							<li class="has-line-data" data-line-start="173" data-line-end="174">Forum: <a href="https://forum.sugarchain.org/v">https://forum.sugarchain.org/</a></li>
+							<li class="has-line-data" data-line-start="175" data-line-end="176">Twitter: <a href="https://twitter.com/sugarchain_dev">https://twitter.com/sugarchain_dev</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=159 data-line-end=161 ><a id="License_159"></a>License</h2>
 							<p class="has-line-data" data-line-start="161" data-line-end="163">Sugarchain Yumekawa is released under the terms of the MIT license. See <a href="COPYING">COPYING</a> for more<br>
