--- a/index.html
+++ b/index.html
@@ -349,7 +349,8 @@
 							<ul>
 							<li class="has-line-data" data-line-start="172" data-line-end="173">Discord: <strong>Deleted by someone's reporting - Saturday, 7 September, 2019 (UTC)</strong></li>
 							<li class="has-line-data" data-line-start="173" data-line-end="174">Forum: <a href="https://forum.sugarchain.org/v">https://forum.sugarchain.org/</a></li>
-							<li class="has-line-data" data-line-start="175" data-line-end="176">Twitter: <a href="https://twitter.com/sugarchain_dev">https://twitter.com/sugarchain_dev</a></li>
+							<li class="has-line-data" data-line-start="174" data-line-end="175">Telegram: <a href="https://t.me/sugarchain">https://t.me/sugarchain</a></li>
+							<li class="has-line-data" data-line-start="176" data-line-end="177">Twitter: <a href="https://twitter.com/sugarchain_dev">https://twitter.com/sugarchain_dev</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=159 data-line-end=161 ><a id="License_159"></a>License</h2>
 							<p class="has-line-data" data-line-start="161" data-line-end="163">Sugarchain Yumekawa is released under the terms of the MIT license. See <a href="COPYING">COPYING</a> for more<br>
