--- a/index.html
+++ b/index.html
@@ -372,7 +372,13 @@
 		</section>
 
 		<footer id="contacts" class="text-center">
-			If you are interested in the Sugarchain project, come to <a href="https://discord.gg/rm7HHv6" rel="nofollow">Discord</a> and follow us on <a href="https://twitter.com/sugarchain_dev" rel="nofollow">Twitter</a>.
+			If you are interested in the Sugarchain project, come to our community.
+			<br>
+			<a href="https://forum.sugarchain.org" target="_blank" rel="nofollow">Forum</a>
+			| 
+			<a href="https://t.me/sugarchain" target="_blank" rel="nofollow">Telegram</a>
+			| 
+			<a href="https://twitter.com/sugarchain_dev" target="_blank" rel="nofollow">Twitter</a>
 		</footer>
 
 		<script>
