--- a/index.html
+++ b/index.html
@@ -291,11 +291,11 @@
 							</ul>
 							<h2 class="code-line" data-line-start=105 data-line-end=107 ><a id="Wallet_105"></a>Wallet</h2>
 							<ul>
-							<li class="has-line-data" data-line-start="107" data-line-end="108">Win64: <a href="https://github.com/sugarchain-project/sugarchain/releases/tag/release-0.16.3.21rc1">https://github.com/sugarchain-project/sugarchain/releases/tag/release-0.16.3.21rc1</a></li>
+							<li class="has-line-data" data-line-start="107" data-line-end="108">Win64: <a href="https://github.com/sugarchain-project/sugarchain/releases/latest">https://github.com/sugarchain-project/sugarchain/releases/latest</a></li>
 							<li class="has-line-data" data-line-start="108" data-line-end="109">Win32: comming soon</li>
-							<li class="has-line-data" data-line-start="109" data-line-end="110">Linux64: <a href="https://github.com/sugarchain-project/sugarchain/releases/tag/release-0.16.3.21rc1">https://github.com/sugarchain-project/sugarchain/releases/tag/release-0.16.3.21rc1</a></li>
+							<li class="has-line-data" data-line-start="109" data-line-end="110">Linux64: <a href="https://github.com/sugarchain-project/sugarchain/releases/latest">https://github.com/sugarchain-project/sugarchain/releases/latest</a></li>
 							<li class="has-line-data" data-line-start="110" data-line-end="111">Linux32: comming soon</li>
-							<li class="has-line-data" data-line-start="111" data-line-end="112">OSX: <a href="https://github.com/sugarchain-project/sugarchain/releases/tag/release-0.16.3.21rc1">https://github.com/sugarchain-project/sugarchain/releases/tag/release-0.16.3.21rc1</a></li>
+							<li class="has-line-data" data-line-start="111" data-line-end="112">OSX: <a href="https://github.com/sugarchain-project/sugarchain/releases/latest">https://github.com/sugarchain-project/sugarchain/releases/latest</a></li>
 							<li class="has-line-data" data-line-start="112" data-line-end="113">ARM64: comming soon</li>
 							<li class="has-line-data" data-line-start="113" data-line-end="114">ARM32: comming soon</li>
 							<li class="has-line-data" data-line-start="114" data-line-end="115">Source: comming soon</li>
@@ -303,6 +303,7 @@
 							<h2 class="code-line" data-line-start=117 data-line-end=119 ><a id="Cpuminer_117"></a>Cpuminer</h2>
 							<p class="has-line-data" data-line-start="119" data-line-end="120">Bech32 address is by default and strongly recommended. <code>-t1</code> uses 1 thread. If you want more hash, increase this number.</p>
 							<ul>
+							<li class="has-line-data" data-line-start="135" data-line-end="136"><strong>cpuminer-opt-sugarchain</strong>: <a href="https://github.com/cryptozeny/cpuminer-opt-sugarchain/releases/latest">https://github.com/cryptozeny/cpuminer-opt-sugarchain/releases/latest</a></li>
 							<li class="has-line-data" data-line-start="120" data-line-end="121">Solo mining: Make a file <code>sugarchain.conf</code>, restart your wallet and run cpuminer-opt-sugarchain (RPC=<code>34229</code>, testnet5 RPC=<code>44229</code>, regtest RPC=<code>45339</code>)</li>
 							</ul>
 							<ul>
@@ -322,7 +323,6 @@
 							</ul>
 							<ul>
 							<li class="has-line-data" data-line-start="134" data-line-end="135">For mining on Windows, please cheack out our detailed tutorial here: <a href="https://github.com/sugarchain-project/Windows-Mining/wiki/Solo-Mining-for-Windows1">https://github.com/sugarchain-project/Windows-Mining/wiki/Solo-Mining-for-Windows</a></li>
-							<li class="has-line-data" data-line-start="135" data-line-end="136"><strong>cpuminer-opt-sugarchain</strong>: <a href="https://github.com/cryptozeny/cpuminer-opt-sugarchain/releases/tag/v3.8.8.1.7rc1">https://github.com/cryptozeny/cpuminer-opt-sugarchain/releases/tag/v3.8.8.1.7rc1</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=137 data-line-end=139 ><a id="Pools_137"></a>Pools</h2>
 							<p class="has-line-data" data-line-start="139" data-line-end="140">Please contact us if you have a new mining pool.</p>
