--- a/index.html
+++ b/index.html
@@ -348,7 +348,8 @@
 							<h2 class="code-line" data-line-start=170 data-line-end=172 ><a id="Community_170"></a>Community</h2>
 							<ul>
 							<li class="has-line-data" data-line-start="172" data-line-end="173">Discord: <strong>Deleted by someone's reporting - Saturday, 7 September, 2019 (UTC)</strong></li>
-							<li class="has-line-data" data-line-start="173" data-line-end="174">Forum: <a href="https://forum.sugarchain.org/v">https://forum.sugarchain.org/</a></li>
+							<li class="has-line-data" data-line-start="173" data-line-end="174">Forum: <a href="https://forum.sugarchain.org">https://forum.sugarchain.org</a></li>
+							<li class="has-line-data" data-line-start="173" data-line-end="174">Bitcointalk: <a href="https://bitcointalk.org/index.php?topic=5177722.0">https://bitcointalk.org/index.php?topic=5177722.0</a></li>
 							<li class="has-line-data" data-line-start="174" data-line-end="175">Telegram: <a href="https://t.me/sugarchain">https://t.me/sugarchain</a></li>
 							<li class="has-line-data" data-line-start="176" data-line-end="177">Twitter: <a href="https://twitter.com/sugarchain_dev">https://twitter.com/sugarchain_dev</a></li>
 							</ul>
