--- a/index.html
+++ b/index.html
@@ -327,17 +327,17 @@
 							<h2 class="code-line" data-line-start=137 data-line-end=139 ><a id="Pools_137"></a>Pools</h2>
 							<p class="has-line-data" data-line-start="139" data-line-end="140">Please contact us if you have a new mining pool.</p>
 							<ul>
-							<li class="has-line-data" data-line-start="140" data-line-end="141">1pool@tokyo: <a href="https://1pool.sugarchain.org/">https://1pool.sugarchain.org/</a></li>
-							<li class="has-line-data" data-line-start="141" data-line-end="142">2pool@tokyo: <a href="https://2pool.sugarchain.org/">https://2pool.sugarchain.org/</a></li>
-							<li class="has-line-data" data-line-start="142" data-line-end="143">52hash@china: <a href="http://sugar.52hash.com/">http://sugar.52hash.com/</a></li>
-							<li class="has-line-data" data-line-start="143" data-line-end="144">rplant@moscow: <a href="https://pool.rplant.xyz/">https://pool.rplant.xyz/</a></li>
-							<li class="has-line-data" data-line-start="144" data-line-end="145">happysensor@korea: <a href="http://pool.happysensor.xyz/">http://pool.happysensor.xyz/</a></li>
-							<li class="has-line-data" data-line-start="145" data-line-end="146">hashpex@USA: <a href="http://hashpex.com/">http://hashpex.com/</a></li>
-							<li class="has-line-data" data-line-start="146" data-line-end="147">skypool@global: <a href="https://sugar.skypool.co/">https://sugar.skypool.co/ (beta mode)</a></li>
+							<li class="has-line-data" data-line-start="140" data-line-end="141">1pool@tokyo: <a href="https://1pool.sugarchain.org/">https://1pool.sugarchain.org</a></li>
+							<li class="has-line-data" data-line-start="141" data-line-end="142">2pool@tokyo: <a href="https://2pool.sugarchain.org/">https://2pool.sugarchain.org</a></li>
+							<li class="has-line-data" data-line-start="142" data-line-end="143">52hash@china: <a href="http://sugar.52hash.com/">http://sugar.52hash.com</a></li>
+							<li class="has-line-data" data-line-start="143" data-line-end="144">rplant@moscow: <a href="https://pool.rplant.xyz/">https://pool.rplant.xyz</a></li>
+							<li class="has-line-data" data-line-start="144" data-line-end="145">happysensor@korea: <a href="http://pool.happysensor.xyz/">http://pool.happysensor.xyz</a></li>
+							<li class="has-line-data" data-line-start="145" data-line-end="146">hashpex@USA: <a href="http://hashpex.com/">http://hashpex.com</a></li>
+							<li class="has-line-data" data-line-start="146" data-line-end="147">skypool@global: <a href="https://sugar.skypool.co/">https://sugar.skypool.co (beta mode)</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=147 data-line-end=149 ><a id="Explorer_147"></a>Explorer</h2>
 							<ul>
-							<li class="has-line-data" data-line-start="149" data-line-end="150">1explorer: <a href="https://1explorer.sugarchain.org/">https://1explorer.sugarchain.org/</a></li>
+							<li class="has-line-data" data-line-start="149" data-line-end="150">1explorer: <a href="https://1explorer.sugarchain.org/">https://1explorer.sugarchain.org</a></li>
 							<li class="has-line-data" data-line-start="150" data-line-end="151">2explorer: comming soon</li>
 							<li class="has-line-data" data-line-start="151" data-line-end="152">trezor blockbook: <a href="https://sugarchain-blockbook.ilmango.work/blocks">https://sugarchain-blockbook.ilmango.work/blocks</a></li>
 							</ul>
