--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 							<li class="has-line-data" data-line-start="143" data-line-end="144">rplant@moscow: <a href="https://pool.rplant.xyz/">https://pool.rplant.xyz</a></li>
 							<li class="has-line-data" data-line-start="144" data-line-end="145">happysensor@korea: <a href="http://pool.happysensor.xyz/">http://pool.happysensor.xyz</a></li>
 							<li class="has-line-data" data-line-start="145" data-line-end="146">hashpex@USA: <a href="http://hashpex.com/">http://hashpex.com</a></li>
-							<li class="has-line-data" data-line-start="146" data-line-end="147">skypool@global: <a href="https://sugar.skypool.co/">https://sugar.skypool.co (beta mode)</a></li>
+							<li class="has-line-data" data-line-start="146" data-line-end="147">skypool@global: <a href="https://sugar.skypool.co/">https://sugar.skypool.co</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=147 data-line-end=149 ><a id="Explorer_147"></a>Explorer</h2>
 							<ul>
