add: website url

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 							<!-- MD to HTML: https://dillinger.io/ -->
 
 							<h1 class="code-line" data-line-start=0 data-line-end=2 ><a id="Sugarchain_0"></a>Sugarchain</h1>
-							<p class="has-line-data" data-line-start="2" data-line-end="3">one-CPU-one-vote, the world’s fastest PoW blockchain</p>
+							<p class="has-line-data" data-line-start="2" data-line-end="3">one-CPU-one-vote, the world’s fastest PoW blockchain<br><a href="https://sugarchain.org">https://sugarchain.org</a></p>
 							<h2 class="code-line" data-line-start=5 data-line-end=7 ><a id="The_meaning_of_Yumekawa_5"></a>The meaning of Yumekawa</h2>
 							<p class="has-line-data" data-line-start="7" data-line-end="8">Sugarchain’s first node software is called <code>Yumekawa (夢川)</code>. It can be translated in some ways.</p>
 							<ul>
