change colour temporarily
Credit: AestheticSenpa1

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				background-color: #202225;
+				background-color: #50BADF;
 				color: #ffffff;
 			}
 			header h1 {
