--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				background-color: #202225;
+				background-color: #50BADF;
 				color: #ffffff;
 			}
 			header h1 {
@@ -52,7 +52,7 @@
 				display: inline-block;
 			}
 			a {
-				color: #7f97d8;
+				color: #ffffff;
 				text-decoration: underline;
 				transition: ease-in 0.1s;
 			}
@@ -66,8 +66,8 @@
 				max-width: 100%;
 			}
 			footer {
-				background-color: #191B1C;
-				color: #ffffff;
+				background-color: #50badf;
+				color: #white;
 				padding: 20px;
 			}
 			code {
