--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				display: inline-block;
 			}
 			a {
-				color: #ffffff;
+				color: #50BADF;
 				text-decoration: underline;
 				transition: ease-in 0.1s;
 			}
