--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
 					</div>
 					<div class="links mb-2">
 						<a href="#specs" class="scroll">SPECS</a>
+						<body text="white">
 						<a href="https://github.com/sugarchain-project/sugarchain/releases/latest" target="_blank">WALLET</a>
+						</body>
 						<a href="https://github.com/cryptozeny/cpuminer-opt-sugarchain/releases/latest" target="_blank">CPUMINER</a>
 						<a href="#contacts" class="scroll">CONTACTS</a>
 					</div>
