--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
 				text-decoration: underline;
 				transition: ease-in 0.1s;
 			}
+			b {
+				color: #FFFFFF
+				text-decoration: underline;
+				transition: ease-in 0.1s;
+			}
 			a:hover {
 				color: #5877cc;
 			}
@@ -103,12 +108,10 @@
 						Current height is <span class="loading">loading...</span> <a href="#" class="current d-none" target="_blank">0</a> (<span class="passed">0</span> blocks since you open this page)
 					</div>
 					<div class="links mb-2">
-						<a href="#specs" class="scroll">SPECS</a>
-						<body text="white">
-						<a href="https://github.com/sugarchain-project/sugarchain/releases/latest" target="_blank">WALLET</a>
-						</body>
-						<a href="https://github.com/cryptozeny/cpuminer-opt-sugarchain/releases/latest" target="_blank">CPUMINER</a>
-						<a href="#contacts" class="scroll">CONTACTS</a>
+						<b href="#specs" class="scroll">SPECS</b>
+						<b href="https://github.com/sugarchain-project/sugarchain/releases/latest" target="_blank">WALLET</b>
+						<b href="https://github.com/cryptozeny/cpuminer-opt-sugarchain/releases/latest" target="_blank">CPUMINER</b>
+						<b href="#contacts" class="scroll">CONTACTS</b>
 					</div>
 				</div>
 			</div>
