--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				background-color: #50BADF;
+				background-color: #202225;
 				color: #ffffff;
 			}
 			header h1 {
@@ -52,12 +52,7 @@
 				display: inline-block;
 			}
 			a {
-				color: #50BADF;
-				text-decoration: underline;
-				transition: ease-in 0.1s;
-			}
-			b {
-				color: #FFFFFF
+				color: #7f97d8;
 				text-decoration: underline;
 				transition: ease-in 0.1s;
 			}
@@ -71,7 +66,7 @@
 				max-width: 100%;
 			}
 			footer {
-				background-color: #50badf;
+				background-color: #191B1C;
 				color: #ffffff;
 				padding: 20px;
 			}
