--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
 						Current height is <span class="loading">loading...</span> <a href="#" class="current d-none" target="_blank">0</a> (<span class="passed">0</span> blocks since you open this page)
 					</div>
 					<div class="links mb-2">
-						<b href="#specs" class="scroll">SPECS</b>
-						<b href="https://github.com/sugarchain-project/sugarchain/releases/latest" target="_blank">WALLET</b>
-						<b href="https://github.com/cryptozeny/cpuminer-opt-sugarchain/releases/latest" target="_blank">CPUMINER</b>
-						<b href="#contacts" class="scroll">CONTACTS</b>
+						<a href="#specs" class="scroll">SPECS</a>
+						<a href="https://github.com/sugarchain-project/sugarchain/releases/latest" target="_blank">WALLET</a>
+						<a href="https://github.com/cryptozeny/cpuminer-opt-sugarchain/releases/latest" target="_blank">CPUMINER</a>
+						<a href="#contacts" class="scroll">CONTACTS</a>
 					</div>
 				</div>
 			</div>
