add: discord at html footer

--- a/index.html
+++ b/index.html
@@ -375,6 +375,8 @@
 		<footer id="contacts" class="text-center">
 			If you are interested in the Sugarchain project, come to our community.
 			<br>
+			<a href="https://discord.gg/5fvpTdk" target="_blank" rel="nofollow">Discord</a>
+			| 
 			<a href="https://forum.sugarchain.org" target="_blank" rel="nofollow">Forum</a>
 			| 
 			<a href="https://t.me/sugarchain" target="_blank" rel="nofollow">Telegram</a>
