--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				display: inline-block;
 			}
 			a {
-				color: #7f97d8;
+				color: #d3d3d3;
 				text-decoration: underline;
 				transition: ease-in 0.1s;
 			}
