add: html: footer: bitcointalk

--- a/index.html
+++ b/index.html
@@ -379,6 +379,8 @@
 			| 
 			<a href="https://forum.sugarchain.org" target="_blank" rel="nofollow">Forum</a>
 			| 
+			<a href="https://bitcointalk.org/index.php?topic=5177722.0" target="_blank" rel="nofollow">Bitcointalk</a>
+			| 
 			<a href="https://t.me/sugarchain" target="_blank" rel="nofollow">Telegram</a>
 			| 
 			<a href="https://twitter.com/sugarchain_dev" target="_blank" rel="nofollow">Twitter</a>
