Changed to dark cyan

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				display: inline-block;
 			}
 			a {
-				color: #d3d3d3;
+				color: #008b8b;
 				text-decoration: underline;
 				transition: ease-in 0.1s;
 			}
