Final change: change back to original color

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				display: inline-block;
 			}
 			a {
-				color: #008b8b;
+				color: #7f97d8;
 				text-decoration: underline;
 				transition: ease-in 0.1s;
 			}
