Change color to #3C2973

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				display: inline-block;
 			}
 			a {
-				color: #9400D3;
+				color: #3C2973;
 				text-decoration: underline;
 				transition: ease-in 0.1s;
 			}
