fix: url color(blue) and hover(cyan)

--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
 				display: inline-block;
 			}
 			a {
-				color: #3C2973;
+				color: #007bff;
 				text-decoration: underline;
 				transition: ease-in 0.1s;
 			}
 			a:hover {
-				color: #5877cc;
+				/* color: #5877cc; */
+				color: #00f0f0;
 			}
 			#specs {
 				padding: 30px 0px;
