fix: footer color sugarcyan

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				background-color: #50BADF;
+				background-color: #50BADF; // sugarcyan
 				color: #ffffff;
 			}
 			header h1 {
@@ -67,7 +67,8 @@
 				max-width: 100%;
 			}
 			footer {
-				background-color: #191B1C;
+				/* background-color: #191B1C; */
+				background-color: #50BADF; // sugarcyan
 				color: #ffffff;
 				padding: 20px;
 			}
