--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				background-color: #50BADF;
+				background-color: #50BADF; // sugarcyan
 				color: #ffffff;
 			}
 			header h1 {
@@ -52,12 +52,13 @@
 				display: inline-block;
 			}
 			a {
-				color: #3C2973;
+				color: #007bff;
 				text-decoration: underline;
 				transition: ease-in 0.1s;
 			}
 			a:hover {
-				color: #5877cc;
+				/* color: #5877cc; */
+				color: #00f0f0;
 			}
 			#specs {
 				padding: 30px 0px;
@@ -66,7 +67,8 @@
 				max-width: 100%;
 			}
 			footer {
-				background-color: #191B1C;
+				/* background-color: #191B1C; */
+				background-color: #50BADF; // sugarcyan
 				color: #ffffff;
 				padding: 20px;
 			}
