hotfix: remove: false comment "//"

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				background-color: #50BADF; // sugarcyan
+				background-color: #50BADF;
 				color: #ffffff;
 			}
 			header h1 {
@@ -68,7 +68,7 @@
 			}
 			footer {
 				/* background-color: #191B1C; */
-				background-color: #50BADF; // sugarcyan
+				background-color: #50BADF;
 				color: #ffffff;
 				padding: 20px;
 			}
