--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				background-color: #50BADF;
+				background-color: #202225;
 				color: #ffffff;
 			}
 			header h1 {
@@ -52,13 +52,12 @@
 				display: inline-block;
 			}
 			a {
-				color: #007bff;
+				color: #7f97d8;
 				text-decoration: underline;
 				transition: ease-in 0.1s;
 			}
 			a:hover {
-				/* color: #5877cc; */
-				color: #00f0f0;
+				color: #5877cc;
 			}
 			#specs {
 				padding: 30px 0px;
@@ -67,8 +66,7 @@
 				max-width: 100%;
 			}
 			footer {
-				/* background-color: #191B1C; */
-				background-color: #50BADF;
+				background-color: #191B1C;
 				color: #ffffff;
 				padding: 20px;
 			}
