--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-12">
-						<div class="specs-body" markdown="1">
+						<div class="specs-body">
 							<!-- BEGIN - WEBSITE -->
 							<!-- MD to HTML: https://dillinger.io/ -->
 
