--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 
 							<h1 class="code-line" data-line-start=0 data-line-end=2 ><a id="Sugarchain_0"></a>Sugarchain</h1>
-							<p class="has-line-data" data-line-start="2" data-line-end="4">one-CPU-one-vote, the world’s fastest PoW blockchain&lt;br/&gt;<br>
+							<p class="has-line-data" data-line-start="2" data-line-end="4">one-CPU-one-vote, the world’s fastest PoW blockchain<br>
 							<a href="https://sugarchain.org">https://sugarchain.org</a></p>
 							<h2 class="code-line" data-line-start=6 data-line-end=8 ><a id="The_meaning_of_Yumekawa_6"></a>The meaning of Yumekawa</h2>
 							<p class="has-line-data" data-line-start="8" data-line-end="9">Sugarchain’s first node software is called <code>Yumekawa (夢川)</code>. It can be translated in some ways.</p>
