--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
 							<li class="has-line-data" data-line-start="152" data-line-end="153">happysensor@korea: <a href="http://pool.happysensor.xyz">http://pool.happysensor.xyz</a></li>
 							<li class="has-line-data" data-line-start="153" data-line-end="154">hashpex@USA: <a href="http://hashpex.com">http://hashpex.com</a></li>
 							<li class="has-line-data" data-line-start="154" data-line-end="155">skypool@global: <a href="https://sugar.skypool.co">https://sugar.skypool.co</a></li>
+							<li class="has-line-data" data-line-start="155" data-line-end="156">mofumofu@tokyo: <a href="https://nomp.mofumofu.me/">https://nomp.mofumofu.me</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=157 data-line-end=159 ><a id="Explorer_157"></a>Explorer</h2>
 							<ul>
@@ -356,9 +357,13 @@
 							<li class="has-line-data" data-line-start="167" data-line-end="168">SUGAR-DOGE: <a href="https://ex4ange.org/?SUGAR-DOGE">https://ex4ange.org/?SUGAR-DOGE</a></li>
 							<li class="has-line-data" data-line-start="168" data-line-end="169">SUGAR-BTC: <a href="https://ex4ange.org/?SUGAR-BTC">https://ex4ange.org/?SUGAR-BTC</a></li>
 							</ul>
+							<li class="has-line-data" data-line-start="169" data-line-end="170">ALTMARKETS
+							<ul>
+							<li class="has-line-data" data-line-start="170" data-line-end="171">SUGAR-BTC: <a href="https://altmarkets.io/trading/sugarbtc">https://altmarkets.io/trading/sugarbtc</a></li>
+							</ul>
 							</li>
 							</ul>
-							<h2 class="code-line" data-line-start=171 data-line-end=173 ><a id="Community_171"></a>Community</h2>
+							<h2 class="code-line" data-line-start=172 data-line-end=173 ><a id="Community_171"></a>Community</h2>
 							<ul>
 							<li class="has-line-data" data-line-start="173" data-line-end="174">Discord: <a href="https://discord.gg/5fvpTdk">https://discord.gg/5fvpTdk</a></li>
 							<li class="has-line-data" data-line-start="174" data-line-end="175">Forum: <a href="https://forum.sugarchain.org">https://forum.sugarchain.org</a></li>
@@ -367,7 +372,7 @@
 							<li class="has-line-data" data-line-start="177" data-line-end="178">Twitter: <a href="https://twitter.com/sugarchain_dev">https://twitter.com/sugarchain_dev</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=180 data-line-end=182 ><a id="License_180"></a>License</h2>
-							<p class="has-line-data" data-line-start="182" data-line-end="184">Sugarchain Yumekawa is released under the terms of the MIT license. See <a href="COPYING">COPYING</a> for more<br>
+							<p class="has-line-data" data-line-start="182" data-line-end="184">Sugarchain Yumekawa is released under the terms of the MIT license. See <a href="https://github.com/sugarchain-project/sugarchain/blob/master-v0.16.3/COPYING">COPYING</a> for more<br>
 							information or see <a href="https://opensource.org/licenses/MIT">https://opensource.org/licenses/MIT</a>.</p>
 							<ul>
 							<li class="has-line-data" data-line-start="184" data-line-end="185">Copyright © 2009-2010 Satoshi Nakamoto</li>
