--- a/index.html
+++ b/index.html
@@ -338,10 +338,10 @@
 							<li class="has-line-data" data-line-start="149" data-line-end="150">2pool@tokyo: <a href="https://2pool.sugarchain.org">https://2pool.sugarchain.org</a></li>
 							<li class="has-line-data" data-line-start="150" data-line-end="151">52hash@china: <a href="http://sugar.52hash.com">http://sugar.52hash.com</a></li>
 							<li class="has-line-data" data-line-start="151" data-line-end="152">rplant@moscow: <a href="https://pool.rplant.xyz">https://pool.rplant.xyz</a></li>
-							<li class="has-line-data" data-line-start="152" data-line-end="153">happysensor@ulsan: <a href="http://pool.happysensor.xyz">http://pool.happysensor.xyz</a></li>
+							<li class="has-line-data" data-line-start="152" data-line-end="153">happysensor@korea: <a href="http://pool.happysensor.xyz">http://pool.happysensor.xyz</a></li>
 							<li class="has-line-data" data-line-start="153" data-line-end="154">hashpex@newyork: <a href="http://hashpex.com">http://hashpex.com</a></li>
 							<li class="has-line-data" data-line-start="154" data-line-end="155">skypool@global: <a href="https://sugar.skypool.co">https://sugar.skypool.co</a></li>
-							<li class="has-line-data" data-line-start="155" data-line-end="156">mofumofu@tokyo: <a href="https://nomp.mofumofu.me/">https://nomp.mofumofu.me</a></li>
+							<li class="has-line-data" data-line-start="155" data-line-end="156">mofumofu@japan: <a href="https://nomp.mofumofu.me/">https://nomp.mofumofu.me</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=157 data-line-end=159 ><a id="Explorer_157"></a>Explorer</h2>
 							<ul>
@@ -359,6 +359,7 @@
 							<li class="has-line-data" data-line-start="169" data-line-end="170">ALTMARKETS
 							<ul>
 							<li class="has-line-data" data-line-start="170" data-line-end="171">SUGAR-BTC: <a href="https://altmarkets.io/trading/sugarbtc">https://altmarkets.io/trading/sugarbtc</a></li>
+							<li class="has-line-data" data-line-start="171" data-line-end="172">SUGAR-BTC: <a href="https://altmarkets.io/trading/sugardoge">https://altmarkets.io/trading/sugardoge</a></li>
 							</ul>
 							</li>
 							</ul>
