--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 			| 
 			<a href="https://twitter.com/sugarchain_dev" target="_blank" rel="nofollow">Twitter</a>
 			| 
-			<a href="https://www.reddit.com/r/Sugarchain/" target="_blank" rel="nofollow">Reddit</a>
+			<a href="https://www.reddit.com/r/Sugarchain" target="_blank" rel="nofollow">Reddit</a>
 		</footer>
 
 		<script>
