add: Reddit community (#22)

--- a/index.html
+++ b/index.html
@@ -402,6 +402,8 @@
 			<a href="https://t.me/sugarchain" target="_blank" rel="nofollow">Telegram</a>
 			| 
 			<a href="https://twitter.com/sugarchain_dev" target="_blank" rel="nofollow">Twitter</a>
+			| 
+			<a href="https://www.reddit.com/r/Sugarchain" target="_blank" rel="nofollow">Reddit</a>
 		</footer>
 
 		<script>
