fix: mofumofu@tokyo

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 							<li class="has-line-data" data-line-start="152" data-line-end="153">happysensor@korea: <a href="http://pool.happysensor.xyz">http://pool.happysensor.xyz</a></li>
 							<li class="has-line-data" data-line-start="153" data-line-end="154">hashpex@usa: <a href="http://hashpex.com">http://hashpex.com</a></li>
 							<li class="has-line-data" data-line-start="154" data-line-end="155">skypool@(singapore | amsterdam | newyork): <a href="https://sugar.skypool.co">https://sugar.skypool.co</a></li>
-							<li class="has-line-data" data-line-start="155" data-line-end="156">mofumofu@japan: <a href="https://nomp.mofumofu.me/">https://nomp.mofumofu.me</a></li>
+							<li class="has-line-data" data-line-start="155" data-line-end="156">mofumofu@tokyo: <a href="https://nomp.mofumofu.me/">https://nomp.mofumofu.me</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=157 data-line-end=159 ><a id="Explorer_157"></a>Explorer</h2>
 							<ul>
