fix: SUGAR-DOGE by 여유만만

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 							<li class="has-line-data" data-line-start="169" data-line-end="170">ALTMARKETS
 							<ul>
 							<li class="has-line-data" data-line-start="170" data-line-end="171">SUGAR-BTC: <a href="https://altmarkets.io/trading/sugarbtc">https://altmarkets.io/trading/sugarbtc</a></li>
-							<li class="has-line-data" data-line-start="171" data-line-end="172">SUGAR-BTC: <a href="https://altmarkets.io/trading/sugardoge">https://altmarkets.io/trading/sugardoge</a></li>
+							<li class="has-line-data" data-line-start="171" data-line-end="172">SUGAR-DOGE: <a href="https://altmarkets.io/trading/sugardoge">https://altmarkets.io/trading/sugardoge</a></li>
 							</ul>
 							</li>
 							</ul>
