add: schoollt@china

--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@
 							<li class="has-line-data" data-line-start="154" data-line-end="155">skypool@(singapore | amsterdam | newyork): <a href="https://sugar.skypool.co">https://sugar.skypool.co</a></li>
 							<li class="has-line-data" data-line-start="155" data-line-end="156">mofumofu@tokyo: <a href="https://nomp.mofumofu.me/">https://nomp.mofumofu.me</a></li>
 							<li class="has-line-data" data-line-start="156" data-line-end="157">loudmining@usa: <a href="https://sugar.loudmining.com">https://sugar.loudmining.com</a></li>
+							<li class="has-line-data" data-line-start="156" data-line-end="157">schoollt@china: <a href="https://pool.schoollt.cn/">https://pool.schoollt.cn/</a></li>
 							</ul>
 							<h2 class="code-line" data-line-start=157 data-line-end=159 ><a id="Explorer_157"></a>Explorer</h2>
 							<ul>
