--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 							<ul>
 							<li class="has-line-data" data-line-start="148" data-line-end="149">1pool@tokyo: <a href="https://1pool.sugarchain.org">https://1pool.sugarchain.org</a></li>
 							<li class="has-line-data" data-line-start="149" data-line-end="150">2pool@tokyo: <a href="https://2pool.sugarchain.org">https://2pool.sugarchain.org</a></li>
-							<li class="has-line-data" data-line-start="150" data-line-end="151">52hash@china: <a href="http://sugar.52hash.com">http://sugar.52hash.com</a></li>
+							<li class="has-line-data" data-line-start="150" data-line-end="151"><strike>52hash@china: <a href="http://sugar.52hash.com">http://sugar.52hash.com</a> (closed)</strike></li>
 							<li class="has-line-data" data-line-start="151" data-line-end="152">rplant@moscow: <a href="https://pool.rplant.xyz">https://pool.rplant.xyz</a></li>
 							<li class="has-line-data" data-line-start="152" data-line-end="153">happysensor@korea: <a href="http://pool.happysensor.xyz">http://pool.happysensor.xyz</a></li>
 							<li class="has-line-data" data-line-start="153" data-line-end="154">hashpex@usa: <a href="http://hashpex.com">http://hashpex.com</a></li>
